--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -59,6 +59,7 @@ $enable-prefers-reduced-motion-media-query: false;
 @import "tooltip";
 @import "table";
 @import "debug";
+@import "calendar";
 
 @import 'data-view';
 
